{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 61,
  "lineage": "94b231ec-b3b8-fe93-75bd-076354459dfe",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:vpc/vpc-0e2daf3fd9c96c0a9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bdcbf4a68675c10f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09cdcc1a9c5c97548",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2daf3fd9c96c0a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0465de8ed6bb3cda6",
            "owner_id": "423390287551",
            "tags": {
              "Environment": "default",
              "Name": "gitlab-VPC",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_external_git_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:security-group/sg-0030257567f6b02a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0030257567f6b02a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "External Git SSH access for gitlab",
                "from_port": 2222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2222
              }
            ],
            "name": "gitlab-external-git-ssh-20240325145535626700000002",
            "name_prefix": "gitlab-external-git-ssh-",
            "owner_id": "423390287551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitlab-external-git-ssh"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlab-external-git-ssh",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2daf3fd9c96c0a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_external_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:security-group/sg-0c1cdb047ff4a9cc3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1cdb047ff4a9cc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enable HTTP access for select VMs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enable HTTPS access for select VMs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gitlab-external-http-https-20240325145535461200000001",
            "name_prefix": "gitlab-external-http-https-",
            "owner_id": "423390287551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitlab-external-http-https"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlab-external-http-https",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2daf3fd9c96c0a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_external_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:security-group/sg-0e75eacf7e4b02b91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e75eacf7e4b02b91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open SSH access for VMs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gitlab-external-ssh",
            "name_prefix": "",
            "owner_id": "423390287551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitlab-external-ssh"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlab-external-ssh",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2daf3fd9c96c0a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_networking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:security-group/sg-0dcfcff4b912466bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0dcfcff4b912466bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Open internal networking for VMs",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "gitlab-internal-networking",
            "name_prefix": "",
            "owner_id": "423390287551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gitlab-internal-networking"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlab-internal-networking",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2daf3fd9c96c0a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gitlab_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f8dce63a6b60467",
            "arn": "arn:aws:ec2:us-east-1:423390287551:instance/i-0ae0dd6e4b141c459",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdk",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "default",
                  "Name": "main-instance-volume",
                  "Owner": "Stephane Zang Bengono",
                  "Project": "Self-Hosted Gitlab",
                  "Terraform": "true",
                  "gitlab_node_data_disk_role": "gitlab-main-instance"
                },
                "throughput": 125,
                "volume_id": "vol-040d2e23ef2509f34",
                "volume_size": 150,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae0dd6e4b141c459",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gitlab-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f8aa62de91214b4",
            "private_dns": "ip-10-0-101-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.194",
            "public_dns": "ec2-34-238-105-251.compute-1.amazonaws.com",
            "public_ip": "34.238.105.251",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "gitlab-main-instance-root"
                },
                "throughput": 125,
                "volume_id": "vol-0fa5304ca598aa4dd",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec352481fd4670bf",
            "tags": {
              "Name": "gitlab-main-instance",
              "gitlab_node_prefix": "gitlab",
              "gitlab_node_type": "gitlab-main-instance"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlab-main-instance",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true",
              "gitlab_node_prefix": "gitlab",
              "gitlab_node_type": "gitlab-main-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0030257567f6b02a3",
              "sg-0c1cdb047ff4a9cc3",
              "sg-0dcfcff4b912466bd",
              "sg-0e75eacf7e4b02b91"
            ]
          },
          "dependencies": [
            "aws_security_group.gitlab_external_git_ssh",
            "aws_security_group.gitlab_external_http_https",
            "aws_security_group.ingress_external_ssh",
            "aws_security_group.internal_networking",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.public",
            "data.aws_vpc.selected",
            "module.gitlab_instance.aws_key_pair.connect",
            "module.gitlab_instance.tls_private_key.key_pair_private_key",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:internet-gateway/igw-00cb6954779983ff0",
            "id": "igw-00cb6954779983ff0",
            "owner_id": "423390287551",
            "tags": {
              "Name": "gitlabInfra-igw"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlabInfra-igw",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e2daf3fd9c96c0a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:subnet/subnet-0ec352481fd4670bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec352481fd4670bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423390287551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "Public": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "public-subnet-1",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Public": "true",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e2daf3fd9c96c0a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423390287551:vpc/vpc-0e2daf3fd9c96c0a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088137c43865dacc0",
            "default_route_table_id": "rtb-0465de8ed6bb3cda6",
            "default_security_group_id": "sg-097c10af50c40c2ba",
            "dhcp_options_id": "dopt-09cdcc1a9c5c97548",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2daf3fd9c96c0a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0465de8ed6bb3cda6",
            "owner_id": "423390287551",
            "tags": {
              "Name": "gitlab-VPC"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "gitlab-VPC",
              "Owner": "Stephane Zang Bengono",
              "Project": "Self-Hosted Gitlab",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}